--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
 	<h1>Hello world</h1>
-	<h1>Hello world2</h1> 
-  <script src="js/scripts.js"></script>
+
+
+
 </body>
 </html>
